--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "cd client && npm run build",
     "test": "cd client && npm test",
     "eject": "cd client && npm run eject",
-    "install-all": "npm install && cd client && npm install"
+    "install-all": "npm install && cd client && npm install",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:seed": "sequelize-cli db:seed:all"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,21 +24,28 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.2.1",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.13.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
+    "sequelize": "^6.35.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.2"
   },
   "eslintConfig": {
     "extends": [
