--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "brainymath-server",
+  "name": "brainymath-backend",
   "version": "1.0.0",
-  "description": "Backend server for BrainyMath application",
-  "main": "index.js",
+  "description": "Backend for BrainyMath Application",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "node",
+    "express",
+    "mongodb",
+    "math",
+    "education"
+  ],
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^6.1.5",
-    "jsonwebtoken": "^9.0.0"
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.2",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.20"
   }
-} 
+}
