--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-toastify": "^11.0.5",
     "sequelize": "^6.35.2",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
