--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,26 @@
 {
   "name": "brainymath-backend",
   "version": "1.0.0",
-  "description": "Backend for BrainyMath Application",
+  "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "data:import": "node seeder.js",
-    "data:destroy": "node seeder.js -d"
+  "start": "node server.js",
+  "server": "nodemon server.js",
+  "data:import": "node seeder.js",
+  "data:destroy": "node seeder.js -d"
   },
-  "keywords": [
-    "node",
-    "express",
-    "mongodb",
-    "math",
-    "education"
-  ],
-  "author": "Your Name",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-validator": "^6.14.2",
-    "helmet": "^6.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4",
-    "morgan": "^1.10.0"
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "dotenv": "^16.0.3",
+  "express": "^4.18.2",
+  "helmet": "^6.0.1",
+  "mongoose": "^7.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+  "nodemon": "^2.0.22"
   }
-}
+  }
+  
+  
